# pelanca

./: .gitignore  Cargo.toml  pelanca_training.pldt  readme.md  stockfish_training.pldt  trained.nnue  training_data.pldt
src/: board.rs  intrinsics.rs  lib.rs  main.rs  types.rs  zobrist.rs
src/core/: board.rs  mod.rs  zobrist.rs
src/engine/: mod.rs  perft_tt.rs  tt.rs
src/moves/: king.rs  knight.rs  magic_bitboards.rs  mod.rs  pawn.rs  queen.rs  sliding.rs
src/nnue/: data_generation.rs  evaluation.rs  features.rs  mod.rs  network.rs  training.rs
src/profiling/: mod.rs
src/search/: alpha_beta.rs  alphabeta.rs  evaluation.rs  lmr.rs  mod.rs  move_ordering.rs  ordering.rs  parallel_search.rs  quiescence.rs  search_thread.rs  see.rs  tactical_analysis.rs  transposition.rs  transposition_table.rs
src/utils/: intrinsics.rs  mod.rs
