[package]
name = "pelanca"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Contessoto"]
description = "High-performance chess engine written in Rust"

[[bin]]
name = "pelanca_v4"
path = "src/main.rs"

[[bin]]
name = "pelanca_uci_v4"
path = "src/bin/uci.rs"

[dependencies]
rayon = "1.10"
num_cpus = "1.16"
crossbeam = "0.8"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release-lto]
inherits = "release"
lto = "fat"                 # modo mais agressivo (mas mais lento pra compilar)
codegen-units = 1